# strafekit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/adapters/: index.html
api/domain/: index.html
api/ports/: index.html
architecture/hexagonal/: index.html
architecture/overview/: index.html
blog/: index.html
blog/POST_TEMPLATE/: index.html
blog/archive/2026/: index.html
blog/industry-infrastructure/: index.html
blog/why-i-rebuilt-strafekit-from-scratch/: index.html
development_standards/: index.html
development_standards/architecture/: index.html
development_standards/commits/: index.html
development_standards/error-handling/: index.html
development_standards/nasa-rules/: index.html
development_standards/security/: index.html
development_standards/style/: index.html
development_standards/workflow/: index.html
docs/: getting-started.md  index.md
docs/architecture/: hexagonal.md  overview.md
docs/blog/: .authors.yml
docs/contributing/: architecture.md  commits.md  error-handling.md  index.md  nasa-rules.md  security.md  style.md  workflow.md
docs/development_standards/: commits.md  error-handling.md  nasa-rules.md  security.md
docs/engineering/: architecture.md  index.md  style.md  workflow.md
engineering/: index.html
engineering/architecture/: index.html
engineering/commits/: index.html
engineering/error-handling/: index.html
engineering/nasa-rules/: index.html
engineering/security/: index.html
engineering/style/: index.html
engineering/workflow/: index.html
getting-started/: index.html
search/: search_index.json
strafekit/: main.py
(+10 files in other folders)
